# mercado-bitcoin-trading-support

./: .gitignore  HEARTBEAT.md  IDENTITY.md  PROFILE.md  USER.md  run_coinbase_plan.sh  start_webui.sh  transcribe_new_audio.py
articles/: 2026-02-03-ai-power-is-the-product.md
data/: token_usage.json
memory/: 2026-02-03.md  2026-02-04.md  2026-02-05.md  2026-02-06.md  football-watch-state.json  heartbeat-state.json
mercado-bitcoin-trading-support/: .gitignore  README.md  pyproject.toml
mercado-bitcoin-trading-support/config/: config.example.json
mercado-bitcoin-trading-support/src/trading_support/: app.py  client.py  config.py  ledger.py  messaging.py
nova-ui-react/: index.html  package-lock.json  package.json
nova-ui-react/src/: App.jsx  index.css
