[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mercado-bitcoin-trading-support"
version = "0.1.0"
description = "Manual trading support CLI for Mercado Bitcoin with decision logging and pre-trade communication."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Nova", email = "nova@openclaw.ai" }
]
dependencies = [
  "typer[all]>=0.10.0",
  "requests>=2.30",
  "rich>=13.0",
  "pydantic>=2.0"
]

[project.scripts]
trading-support = "trading_support.app:app"
